c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/goto_kw_struct_tag.c
// Because 'goto' is a keyword, we can't use it as a struct tag
struct goto { int a; };
int main(void) {
    return 0;
}